--- a/Programmation1/Formatif2/index.html
+++ b/Programmation1/Formatif2/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chapitre 6</title>
+    <title>Examen formatif</title>
 </head>
 <body>
 
-<script src="js/01.js"></script>
+<script src="js/Q4.js"></script>
 </body>
 </html>
