--- a/Programmation1/ExamenFinal/index.html
+++ b/Programmation1/ExamenFinal/index.html
@@ -16,12 +16,47 @@
 				<input type="text" name="user" id="userName" class="form-control" autocomplete="off" placeholder="Entrez votre nom">
 				<input type="button" id="boutonGo" name="Go" value="Go">
 			</div>
-			<div id="conteneurImages" class="row d-flex justify-content-center text-center">
+			<div id="conteneurImages" class="row d-flex background justify-content-center text-center">
 			</div>
 			
 		</div>
 	</form>	
 	
+	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalLettres">
+ 		Ouvrir le modal
+	</button>
+
+	<div class="top-content">
+		<div class="container-fluid">
+			<div id="carousel-example" class="carousel slide" data-ride="carousel">
+				<div class="carousel-inner row w-100 mx-auto" role="listbox">
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active">
+						<img src="img/Letters/A/A1.jpg" class="img-fluid mx-auto d-block" alt="img1">
+					</div>
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="img/Letters/A/A2.jpg" class="img-fluid mx-auto d-block" alt="img2">
+					</div>
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="img/Letters/A/A3.jpg" class="img-fluid mx-auto d-block" alt="img3">
+					</div>
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="img/Letters/A/A4.jpg" class="img-fluid mx-auto d-block" alt="img4">
+					</div>
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="img/Letters/A/A5.jpg" class="img-fluid mx-auto d-block" alt="img5">
+					</div>
+				</div>
+				<a class="carousel-control-prev" href="#carousel-example" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carousel-example" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
+		</div>
+	</div>
 	
 <script src="js/jquery-3.4.1.js"></script>
 <script src="js/bootstrap.js"></script>
