--- a/Programmation1/ExamenFinal/index.html
+++ b/Programmation1/ExamenFinal/index.html
@@ -23,8 +23,8 @@
 			</div>	
 			
 		</form>	
-		<button onclick="window.print()">Imprimer</button>
-		<div id="step4">
+		
+		<div>
 			<div class="col-sm-2 hidden-xs arrowLeft4"><i class="fa fa-arrow-left fa-4x xoneBlack"></i></div>
 			<div class="col-xs-12 col-sm-8">
 				<i class="fa fa-picture-o fa-4x xoneBlack"></i>
