--- a/Programmation1/ExamenFinal/index.html
+++ b/Programmation1/ExamenFinal/index.html
@@ -25,12 +25,12 @@
 		</form>	
 		
 		<div>
-			<div class="col-sm-2 hidden-xs arrowLeft4"><i class="fa fa-arrow-left fa-4x xoneBlack"></i></div>
+			<div class="col-sm-2"><i class=""></i></div>
 			<div class="col-xs-12 col-sm-8">
-				<i class="fa fa-picture-o fa-4x xoneBlack"></i>
-				<div id="fondCacher">
-					<h4 class="h4Black"><strong>&nbsp;&nbsp;&nbsp;Changez le fond</strong></h4>
-					<label class="labelNoir" for="ex3">Cliquez sur les couleurs pour changer le fond:</label>
+				<i class=""></i>
+				<div id="">
+					<h4 class="h4Black"><strong>Changez le fond</strong></h4>
+					<label class="labelNoir">Cliquez sur les couleurs pour changer le fond:</label>
 					<div id="fondCouleur">
 						<div id="rectangleBlanc" class="rectangle" ></div>
 						<div id="rectangleBleu" class="rectangle"></div>
