Envoie de l'examen final

--- a/Programmation1/ExamenFinal/index.html
+++ b/Programmation1/ExamenFinal/index.html
@@ -8,7 +8,7 @@
 </head>
 	
 <body>
-	<!-- Tout le contenu --->
+	<!-- Tout le contenu excepté la section lettre/imprimable--->
 	<div id="contenu" class="hidden" >
 		<!-- Étape1 + bouton accordéon --->
 		<div id="accordion">
@@ -51,7 +51,7 @@
 					<div id="section2" class="text-center p-5">
 						<div class="container">
 							<h4 class=""><strong>Changez vos lettres</strong></h4>
-							<strong>Cliquez sur un des lettres pour en choisir une nouvelle</strong>
+							<strong>Cliquez sur une des lettres pour en choisir une nouvelle</strong>
 						</div>
 					</div>
 				</div>
@@ -68,21 +68,19 @@
 				<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
 					<!--- Changer fond -->
 					<div id="section3" class="p-5 backgroundColor text-center">
-						<div class="">
-							<div class="container">
-								<h4 class=""><strong>Changez le fond</strong></h4>
-								<label class="">Cliquez sur les couleurs pour changer le fond:</label>
-								<div id="fondCouleur">
-									<div id="cercleBlanc" class="cercle formeRonde" ></div>
-									<div id="cercleBleu" class="cercle formeRonde"></div>
-									<div id="cercleBleuFonce" class="cercle formeRonde"></div>
-									<div id="cercleGris" class="cercle formeRonde"></div>
-									<div id="cercleNoir" class="cercle formeRonde"></div>
-									<div id="cercleRose" class="cercle formeRonde"></div>
-									<div id="cercleRouge" class="cercle formeRonde"></div>
-								</div>                
-							</div>
-						</div>
+                        <div class="container">
+                            <h4 class=""><strong>Changez le fond</strong></h4>
+                            <label class="">Cliquez sur les couleurs pour changer le fond:</label>
+                            <div id="fondCouleur">
+                                <div id="cercleBlanc" class="cercle formeRonde" ></div>
+                                <div id="cercleBleu" class="cercle formeRonde"></div>
+                                <div id="cercleBleuFonce" class="cercle formeRonde"></div>
+                                <div id="cercleGris" class="cercle formeRonde"></div>
+                                <div id="cercleNoir" class="cercle formeRonde"></div>
+                                <div id="cercleRose" class="cercle formeRonde"></div>
+                                <div id="cercleRouge" class="cercle formeRonde"></div>
+                            </div>                
+                        </div>
 					</div>
 				</div>
 			</div>
